# GeoIndex

./: AabbIndex.hpp  AabbIndexTest.cpp  BasicGeometry.hpp  BasicGeometryTest.cpp  BoostIndex.hpp  BoostIndexTest.cpp  CMakeLists.txt  Common.hpp  CommonTest.cpp  CubeIndex.cpp  CubeIndex.hpp  CubeIndexTest.cpp  DomainAssertions.cpp  DomainAssertions.hpp  GeometryIndex.cpp  GeometryIndexTest.cpp  NearestNeighbors.hpp  NearestNeighborsTest.cpp  NoIndex.hpp  NoIndexTest.cpp  PerfTest.cpp  PermutationAabbIndex.hpp  PermutationAabbIndexTest.cpp  README.md  ReferenceSolution.cpp  ReferenceSolution.hpp  ReferenceSolutionTest.cpp  Support.cpp  Support.hpp  SupportTest.cpp  TestsForAllIndexes.hpp  geometryIndex.kdev4  main.cpp
